--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1085,7 +1085,8 @@ p {
           bottom: -280px;
           left: 50%;
           -webkit-transform: translateX(-50%);
-                  transform: translateX(-50%); }
+                  transform: translateX(-50%);
+          z-index: 100; }
       .section.pause .container .center-cont .block.right {
         text-align: left;
         width: 500px;
@@ -1107,48 +1108,43 @@ p {
 
 .section.pults {
   position: relative;
-  min-height: 100vh;
-  width: 100%;
   background-color: #242d3a; }
   .section.pults .container {
-    display: table;
-    height: 100vh; }
-    .section.pults .container .blocks {
-      display: table-cell;
-      vertical-align: middle; }
-      .section.pults .container .blocks .block {
-        color: white;
-        text-align: left; }
-      .section.pults .container .blocks .block.main {
-        width: 700px;
-        font-family: "f_helvetica", "Helvetica", sans-serif;
-        font-weight: 300; }
-        .section.pults .container .blocks .block.main .main-1 {
-          opacity: 0.9;
-          text-transform: uppercase;
-          font-size: 35.1px;
-          line-height: 50.71px; }
-        .section.pults .container .blocks .block.main .main-2 {
-          color: #b9d3f5;
-          opacity: 0.8;
-          font-size: 16px;
-          line-height: 26px;
-          margin-top: 20px; }
-      .section.pults .container .blocks .block.parts {
-        margin-left: 5%;
-        margin-top: 5%;
-        font-family: "f_helvetica", "Helvetica", sans-serif;
+    padding-top: 150px;
+    padding-bottom: 150px; }
+    .section.pults .container .blocks .block {
+      color: white;
+      text-align: left; }
+    .section.pults .container .blocks .block.main {
+      width: 650px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 300; }
+      .section.pults .container .blocks .block.main .main-1 {
+        opacity: 0.9;
+        text-transform: uppercase;
+        font-size: 35.1px;
+        line-height: 50.71px; }
+      .section.pults .container .blocks .block.main .main-2 {
+        color: #b9d3f5;
+        opacity: 0.8;
         font-size: 16px;
-        line-height: 30px; }
-        .section.pults .container .blocks .block.parts td {
-          padding: 1% 2%; }
-          .section.pults .container .blocks .block.parts td .caption {
-            color: #52b7f7;
-            font-weight: 600; }
-          .section.pults .container .blocks .block.parts td p {
-            opacity: 0.6;
-            color: #b9d3f5;
-            font-weight: 300; }
+        line-height: 26px;
+        margin-top: 20px; }
+    .section.pults .container .blocks .block.parts {
+      margin-left: 5%;
+      margin-top: 5%;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-size: 16px;
+      line-height: 30px; }
+      .section.pults .container .blocks .block.parts td {
+        padding: 1% 2%; }
+        .section.pults .container .blocks .block.parts td .caption {
+          color: #52b7f7;
+          font-weight: 600; }
+        .section.pults .container .blocks .block.parts td p {
+          opacity: 0.6;
+          color: #b9d3f5;
+          font-weight: 300; }
   .section.pults .block.cleaner {
     position: absolute;
     right: 18%;
@@ -1190,38 +1186,60 @@ p {
         margin-top: 10px;
         color: #52b7f7;
         font-weight: 600; }
-    .section.slideshow .container .block.show .slider.tech-pics {
+    .section.slideshow .container .block.show {
       position: absolute;
       left: 50%;
       top: 60%;
       -webkit-transform: translateX(-50%) translateY(-50%);
               transform: translateX(-50%) translateY(-50%); }
-      .section.slideshow .container .block.show .slider.tech-pics .item {
+      .section.slideshow .container .block.show .circle-ext {
+        position: relative;
         display: inline-block;
-        margin: 10px; }
-        .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext {
-          padding: 5vh;
+        padding: 5vh;
+        border-radius: 1000px;
+        border: 3px #707b8b solid; }
+        .section.slideshow .container .block.show .circle-ext .circle-int {
+          overflow: hidden;
+          position: relative;
+          width: 55vh;
+          height: 55vh;
           border-radius: 1000px;
-          border: 3px #707b8b solid; }
-          .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int {
-            overflow: hidden;
-            position: relative;
-            width: 55vh;
-            height: 55vh;
-            border-radius: 1000px;
-            border: 3px #707b8b solid; }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic {
-              height: 100%;
-              width: 100%;
+          border: 3px #707b8b solid;
+          z-index: 2; }
+          .section.slideshow .container .block.show .circle-ext .circle-int .slider {
+            z-index: 1; }
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic {
+              display: block;
+              height: 500px;
+              width: 500px;
               background-size: cover;
               background-repeat: no-repeat;
               background-position: 50% 50%; }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-1 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-1 {
               background-image: url("http://cs10628.vk.me/u168648930/-7/x_2e2ed933.jpg"); }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-2 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-2 {
               background-image: url("http://img0.liveinternet.ru/images/attach/c/2//64/340/64340657_Koshki001.jpg"); }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-3 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-3 {
               background-image: url("http://cs9952.vk.me/u52960895/-14/x_a8ffe9cf.jpg"); }
+        .section.slideshow .container .block.show .circle-ext .btn {
+          position: absolute;
+          top: 50%;
+          width: 7%;
+          height: 13%;
+          -webkit-transform: translateY(-50%);
+                  transform: translateY(-50%);
+          background: url("../pics/section.slideshow.arrow.svg") center center no-repeat;
+          background-size: cover; }
+        .section.slideshow .container .block.show .circle-ext .btn:hover {
+          opacity: 0.5;
+          cursor: pointer; }
+        .section.slideshow .container .block.show .circle-ext .prev {
+          left: -20%;
+          -webkit-transform: scale(-1, 1) translateY(-50%);
+                  transform: scale(-1, 1) translateY(-50%); }
+        .section.slideshow .container .block.show .circle-ext .next {
+          right: -20%;
+          top: 50%; }
 
 .section.video {
   min-height: 100vh;
@@ -1657,7 +1675,8 @@ p {
           bottom: -280px;
           left: 50%;
           -webkit-transform: translateX(-50%);
-                  transform: translateX(-50%); }
+                  transform: translateX(-50%);
+          z-index: 100; }
       .section.pause .container .center-cont .block.right {
         text-align: left;
         width: 500px;
@@ -1679,48 +1698,43 @@ p {
 
 .section.pults {
   position: relative;
-  min-height: 100vh;
-  width: 100%;
   background-color: #242d3a; }
   .section.pults .container {
-    display: table;
-    height: 100vh; }
-    .section.pults .container .blocks {
-      display: table-cell;
-      vertical-align: middle; }
-      .section.pults .container .blocks .block {
-        color: white;
-        text-align: left; }
-      .section.pults .container .blocks .block.main {
-        width: 700px;
-        font-family: "f_helvetica", "Helvetica", sans-serif;
-        font-weight: 300; }
-        .section.pults .container .blocks .block.main .main-1 {
-          opacity: 0.9;
-          text-transform: uppercase;
-          font-size: 35.1px;
-          line-height: 50.71px; }
-        .section.pults .container .blocks .block.main .main-2 {
-          color: #b9d3f5;
-          opacity: 0.8;
-          font-size: 16px;
-          line-height: 26px;
-          margin-top: 20px; }
-      .section.pults .container .blocks .block.parts {
-        margin-left: 5%;
-        margin-top: 5%;
-        font-family: "f_helvetica", "Helvetica", sans-serif;
+    padding-top: 150px;
+    padding-bottom: 150px; }
+    .section.pults .container .blocks .block {
+      color: white;
+      text-align: left; }
+    .section.pults .container .blocks .block.main {
+      width: 650px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 300; }
+      .section.pults .container .blocks .block.main .main-1 {
+        opacity: 0.9;
+        text-transform: uppercase;
+        font-size: 35.1px;
+        line-height: 50.71px; }
+      .section.pults .container .blocks .block.main .main-2 {
+        color: #b9d3f5;
+        opacity: 0.8;
         font-size: 16px;
-        line-height: 30px; }
-        .section.pults .container .blocks .block.parts td {
-          padding: 1% 2%; }
-          .section.pults .container .blocks .block.parts td .caption {
-            color: #52b7f7;
-            font-weight: 600; }
-          .section.pults .container .blocks .block.parts td p {
-            opacity: 0.6;
-            color: #b9d3f5;
-            font-weight: 300; }
+        line-height: 26px;
+        margin-top: 20px; }
+    .section.pults .container .blocks .block.parts {
+      margin-left: 5%;
+      margin-top: 5%;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-size: 16px;
+      line-height: 30px; }
+      .section.pults .container .blocks .block.parts td {
+        padding: 1% 2%; }
+        .section.pults .container .blocks .block.parts td .caption {
+          color: #52b7f7;
+          font-weight: 600; }
+        .section.pults .container .blocks .block.parts td p {
+          opacity: 0.6;
+          color: #b9d3f5;
+          font-weight: 300; }
   .section.pults .block.cleaner {
     position: absolute;
     right: 18%;
@@ -1809,38 +1823,60 @@ p {
         margin-top: 10px;
         color: #52b7f7;
         font-weight: 600; }
-    .section.slideshow .container .block.show .slider.tech-pics {
+    .section.slideshow .container .block.show {
       position: absolute;
       left: 50%;
       top: 60%;
       -webkit-transform: translateX(-50%) translateY(-50%);
               transform: translateX(-50%) translateY(-50%); }
-      .section.slideshow .container .block.show .slider.tech-pics .item {
+      .section.slideshow .container .block.show .circle-ext {
+        position: relative;
         display: inline-block;
-        margin: 10px; }
-        .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext {
-          padding: 5vh;
+        padding: 5vh;
+        border-radius: 1000px;
+        border: 3px #707b8b solid; }
+        .section.slideshow .container .block.show .circle-ext .circle-int {
+          overflow: hidden;
+          position: relative;
+          width: 55vh;
+          height: 55vh;
           border-radius: 1000px;
-          border: 3px #707b8b solid; }
-          .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int {
-            overflow: hidden;
-            position: relative;
-            width: 55vh;
-            height: 55vh;
-            border-radius: 1000px;
-            border: 3px #707b8b solid; }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic {
-              height: 100%;
-              width: 100%;
+          border: 3px #707b8b solid;
+          z-index: 2; }
+          .section.slideshow .container .block.show .circle-ext .circle-int .slider {
+            z-index: 1; }
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic {
+              display: block;
+              height: 500px;
+              width: 500px;
               background-size: cover;
               background-repeat: no-repeat;
               background-position: 50% 50%; }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-1 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-1 {
               background-image: url("http://cs10628.vk.me/u168648930/-7/x_2e2ed933.jpg"); }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-2 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-2 {
               background-image: url("http://img0.liveinternet.ru/images/attach/c/2//64/340/64340657_Koshki001.jpg"); }
-            .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic-3 {
+            .section.slideshow .container .block.show .circle-ext .circle-int .slider .pic-3 {
               background-image: url("http://cs9952.vk.me/u52960895/-14/x_a8ffe9cf.jpg"); }
+        .section.slideshow .container .block.show .circle-ext .btn {
+          position: absolute;
+          top: 50%;
+          width: 7%;
+          height: 13%;
+          -webkit-transform: translateY(-50%);
+                  transform: translateY(-50%);
+          background: url("../pics/section.slideshow.arrow.svg") center center no-repeat;
+          background-size: cover; }
+        .section.slideshow .container .block.show .circle-ext .btn:hover {
+          opacity: 0.5;
+          cursor: pointer; }
+        .section.slideshow .container .block.show .circle-ext .prev {
+          left: -20%;
+          -webkit-transform: scale(-1, 1) translateY(-50%);
+                  transform: scale(-1, 1) translateY(-50%); }
+        .section.slideshow .container .block.show .circle-ext .next {
+          right: -20%;
+          top: 50%; }
 
 .section.start {
   min-height: 100vh;
